<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_perfil">

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.assproject.assdesenvolvimentointerface.ui.perfil.PerfilFragment"
        android:label="@string/perfil"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/nav_formacao"
        android:name="com.assproject.assdesenvolvimentointerface.ui.formacao.FormacaoFragment"
        android:label="@string/menu_formcao"
        tools:layout="@layout/fragment_formacao" />

    <fragment
        android:id="@+id/nav_curso"
        android:name="com.assproject.assdesenvolvimentointerface.ui.curso.CursoFragment"
        android:label="@string/menu_curso"
        tools:layout="@layout/fragment_curso" />

    <fragment
        android:id="@+id/nav_publicacao"
        android:name="com.assproject.assdesenvolvimentointerface.ui.publicacao.PublicacaoFragment"
        android:label="@string/menu_publi"
        tools:layout="@layout/fragment_publicacao" />
    <fragment
        android:id="@+id/nav_exp"
        android:name="com.assproject.assdesenvolvimentointerface.ui.expoprofi.ExpoProfiFragment"
        android:label="@string/menu_expprofis"
        tools:layout="@layout/fragment_expo_profi" />

</navigation>